# zigzag-llm

./: main.py  pyproject.toml
inputs/hardware/: generic_array_32b.yaml
src/: config.py
