[project]
name = "zigzag-llm"
version = "0.1.0"
description = "ZigZag LLM - Deep Learning Hardware Design Space Exploration for LLMs"
dependencies = [
    "numpy",
    "networkx",
    "sympy",
    "matplotlib",
    "onnx",
    "tqdm",
    "multiprocessing_on_dill",
    "pyyaml",
    "cerberus",
    "seaborn",
    "typeguard",
    "torch",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
